@@ -56,7 +56,8 @@ pipeline {
                    -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ \
                    -Dsonar.junit.reportsPath=target/surefire-reports/ \
                    -Dsonar.jacoco.reportsPath=target/jacoco.exec \
-                   -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml'''
+                   -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml \
+                   -Dsonar.scanner.jvmAdditionalOpts="--add-opens java.base/java.lang=ALL-UNNAMED"'''
               }
             }
 
